--- a/UTS_Interoperability/composer.json
+++ b/UTS_Interoperability/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^8.1",
         "illuminate/http": "^10.32",
-        "laravel/lumen-framework": "^10.0"
+        "laravel/lumen-framework": "^10.0",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
